# cfetch

./: .gitignore  Cargo.toml  README.md  USAGE.md  go.mod  go.sum  main.go  package.json
.github/workflows/: go.yml
app/: globals.css  layout.tsx  page.tsx
app/[handle]/: page.tsx
cfetch-server/: go.mod  go.sum  main.go  sqlc.yaml
cfetch-server/db/query/: session.sql
cfetch-server/db/schema/: 001_auth.sql
cfetch-server/internal/db/: models.go  session.sql.go
cfetch-web/: .gitignore  auth.ts  components.json  next.config.ts  package.json
cfetch-web/app/: actions.ts  globals.css  layout.tsx  page.tsx
cfetch-web/app/(main)/: layout.tsx
cfetch-web/app/[handle]/: page.tsx
cfetch-web/app/auth/: page.tsx
cfetch-web/app/landing/: page.tsx
cfetch-web/components/: analytics-dashboard.tsx  app-sidebar.tsx  code-editor.tsx  create-snippet-dialog.tsx  create-template-dialog.tsx  get-session-btn.tsx  get-started-flow.tsx  google-signin-button.tsx  handle-input.tsx  snippet-editor.tsx
cfetch-web/components/patterns/: p-kbd-1.tsx
cfetch-web/components/ui/: avatar.tsx  badge.tsx  (+3 more)
cfetch-web/judge/: go.mod
cfetch-web/lib/: codeforces.ts  db.ts  shiki.ts
cfetch-web/prisma/: schema.prisma
cmd/: cmd.go
components/: analytics-dashboard.tsx  github-badge.tsx  handle-input.tsx
components/ui/: card.tsx  chart.tsx  dotted-multi-line.tsx  increase-size-pie-chart.tsx  pinging-dot-chart.tsx
data/: data.go  structs.go
extras/: extras.go
lib/: codeforces.ts
model/: layout.go  messages.go  model.go  state.go
src/: args.rs  lib.rs  main.rs  printers.rs
(+15 files in other folders)
